# rccn_apps

./: .gitignore  .gitmodules  Cargo.toml
.github/workflows/: pages.yaml
bsdiff_app/: Cargo.toml
bsdiff_app/src/: main.rs
bsdiff_app/src/bsdiff_service/: command.rs  mod.rs  service.rs  telemetry.rs
mdb/: bsdiff.py  readme.md  requirements.txt
